--- a/fullstackconf.html
+++ b/fullstackconf.html
@@ -102,7 +102,7 @@
     </section>
 
     <!-- Speaker Cards Section -->
-    <section id="speakers" class="py-5" style="background-color: #f8f9fa;">
+    <section id="speakers" class="py-lg-5 m-5" style="background-color: #f8f9fa;">
       <div class="container">
         <div class="row mb-2">
           <div class="col-12 text-center">
@@ -110,39 +110,57 @@
           </div>
         </div>
         <div class="row g-4">
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-4 col-md-8">
             <div class="card h-100 shadow-sm">
+              <img src="https://cdn.wallpapersafari.com/77/69/GWA2nz.jpg" alt="background" class="h-50">
               <div class="card-body text-left">
-                <div class="bg-secondary mx-auto mb-2" style="width: 100%; height: 50%; padding: 0 0 2px 0;"></div>
                 <h5 class="card-title fw-bold">Pelino</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead in.</p>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead in to additional content. The content is a little bit longer.</p>
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-4 col-md-8">
             <div class="card h-100 shadow-sm">
-              <div class="card-body text-center">
-                <div class="bg-secondary mx-auto mb-2" style="width: 100%; height: 50%; padding: 0 0 2px 0;"></div>
-                <h5 class="card-title fw-bold" style="text-align: left;">Pelino</h5>
-                <p class="card-text" style="text-align: left;">This is a wider card with supporting text below as a natural lead in.</p>
+              <img src="https://cdn.wallpapersafari.com/77/69/GWA2nz.jpg" alt="background" class="h-50">
+              <div class="card-body text-left">
+                <h5 class="card-title fw-bold">Pelino</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead in to additional content. The content is a little bit longer.</p>
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-4 col-md-8">
             <div class="card h-100 shadow-sm">
-              <div class="card-body text-center">
-                <div class="bg-secondary mx-auto mb-2" style="width: 100%; height: 50%; padding: 0 0 2px 0;"></div>
-                <h5 class="card-title fw-bold" style="text-align: left;">Pelino</h5>
-                <p class="card-text" style="text-align: left;">This is a wider card with supporting text below as a natural lead in.</p>
+              <img src="https://cdn.wallpapersafari.com/77/69/GWA2nz.jpg" alt="background" class="h-50">
+              <div class="card-body text-left">
+                <h5 class="card-title fw-bold">Pelino</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead in to additional content. The content is a little bit longer.</p>
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-4 col-md-8">
             <div class="card h-100 shadow-sm">
-              <div class="card-body text-center">
-                <div class="bg-secondary mx-auto mb-2" style="width: 100%; height: 50%; padding: 0 0 2px 0;"></div>
-                <h5 class="card-title fw-bold" style="text-align: left;">Pelino</h5>
-                <p class="card-text" style="text-align: left;">This is a wider card with supporting text below as a natural lead in.</p>
+              <img src="https://cdn.wallpapersafari.com/77/69/GWA2nz.jpg" alt="background" class="h-50">
+              <div class="card-body text-left">
+                <h5 class="card-title fw-bold">Pelino</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead in to additional content. The content is a little bit longer.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-8">
+            <div class="card h-100 shadow-sm">
+              <img src="https://cdn.wallpapersafari.com/77/69/GWA2nz.jpg" alt="background" class="h-50">
+              <div class="card-body text-left">
+                <h5 class="card-title fw-bold">Pelino</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead in to additional content. The content is a little bit longer.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-8">
+            <div class="card h-100 shadow-sm">
+              <img src="https://cdn.wallpapersafari.com/77/69/GWA2nz.jpg" alt="background" class="h-50">
+              <div class="card-body text-left">
+                <h5 class="card-title fw-bold">Pelino</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead in to additional content. The content is a little bit longer.</p>
               </div>
             </div>
           </div>
@@ -225,33 +243,33 @@
     <div class="modal fade" id="registrationModal" tabindex="-1" aria-labelledby="registrationModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-lg">
         <div class="modal-content">
-            <div class="modal-header border-bottom">
+            <div class="modal-header border-bottom bg-primary text-white">
                 <h4 class="modal-title" id="registrationModalLabel">Register for Conference</h4>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
         <div class="modal-body p-4">
             <!-- Warning Notification -->
             <div class="alert alert-warning alert-dismissible fade show" role="alert" id="warningAlert">
-              <strong>Important:</strong> Please ensure all information is accurate. Registration fees are non-refundable after confirmation.
+              <strong>Hurry!</strong> Early bird registration end in 2 days.
               <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
 
             <form>
               <!-- Basic Info Section -->
               <div class="mb-4">
-                <h5 class="mb-3 text-dark">Basic Info</h5>
+                <h5 class="mb-3 text-dark">Basic Info.</h5>
                 <div class="mb-3">
-                  <label for="fullName" class="form-label">Full Name</label>
+                  <label for="fullName" class="form-label">Name:</label>
                   <input type="text" class="form-control" id="fullName" required>
                 </div>
                 <div class="mb-3">
-                  <label for="email" class="form-label">Email Address</label>
+                  <label for="email" class="form-label">Email:</label>
                   <input type="email" class="form-control" id="email" required>
                 </div>
                 <div class="mb-3">
                   <label for="role" class="form-label">Job Role</label>
                   <select class="form-select" id="role" required>
-                    <option value="">Select your role</option>
+                    <option value="">Full Stack JS Developer</option>
                     <option value="frontend">Frontend Developer</option>
                     <option value="backend">Backend Developer</option>
                     <option value="fullstack">Full Stack Developer</option>
@@ -264,35 +282,35 @@
 
               <!-- Topic Interests Section -->
               <div class="mb-4">
-                <h5 class="mb-3 text-dark">Which topics interest you the most?</h5>
+                <h5 class="mb-3 text-dark">Which Topics Interest You The Most?</h5>
                 <div class="form-check mb-2">
                   <input class="form-check-input" type="checkbox" value="react" id="topicReact">
                   <label class="form-check-label" for="topicReact">
-                    React & Modern Frontend Frameworks
+                    JavaScript Frameworks
                   </label>
                 </div>
                 <div class="form-check mb-2">
                   <input class="form-check-input" type="checkbox" value="nodejs" id="topicNodejs">
                   <label class="form-check-label" for="topicNodejs">
-                    Node.js & Backend Development
+                    JavaScript Libraries
                   </label>
                 </div>
                 <div class="form-check mb-2">
                   <input class="form-check-input" type="checkbox" value="performance" id="topicPerformance">
                   <label class="form-check-label" for="topicPerformance">
-                    Performance Optimization
+                    Node.js
                   </label>
                 </div>
                 <div class="form-check mb-2">
                   <input class="form-check-input" type="checkbox" value="architecture" id="topicArchitecture">
                   <label class="form-check-label" for="topicArchitecture">
-                    Software Architecture & Design Patterns
+                    Build Tools
                   </label>
                 </div>
                 <div class="form-check mb-2">
                   <input class="form-check-input" type="checkbox" value="testing" id="topicTesting">
                   <label class="form-check-label" for="topicTesting">
-                    Testing & Quality Assurance
+                    ES2015
                   </label>
                 </div>
               </div>
@@ -302,26 +320,26 @@
                 <h5 class="mb-3 text-dark">Payment Info</h5>
                 <div class="row g-3">
                   <div class="col-md-6">
-                    <label for="cardNumber" class="form-label">Card Number</label>
-                    <input type="text" class="form-control" id="cardNumber" placeholder="1234 5678 9012 3456" required>
+                    <label for="cardNumber" class="form-label">Card Number:</label>
+                    <input type="text" class="form-control" id="cardNumber" required>
                   </div>
                   <div class="col-md-3">
-                    <label for="zipCode" class="form-label">Zip Code</label>
-                    <input type="text" class="form-control" id="zipCode" placeholder="12345" required>
+                    <label for="zipCode" class="form-label">Zip Code:</label>
+                    <input type="text" class="form-control" id="zipCode" required>
                   </div>
                   <div class="col-md-3">
-                    <label for="cvv" class="form-label">CVV</label>
-                    <input type="text" class="form-control" id="cvv" placeholder="123" required>
+                    <label for="cvv" class="form-label">CVV:</label>
+                    <input type="text" class="form-control" id="cvv" required>
                   </div>
                 </div>
               </div>
 
               <!-- Date Section -->
               <div class="mb-4">
-                <h5 class="mb-3 text-dark">Conference Date</h5>
+                <h5 class="mb-3 text-dark">Expiration Date:</h5>
                 <div class="mb-3">
-                  <label for="conferenceDate" class="form-label">Select Conference Date</label>
-                  <input type="date" class="form-control" id="conferenceDate" required>
+                  <label for="expirationDate" class="form-label">Select Conference Date</label>
+                  <input type="date" class="form-control" id="expirationDate" required>
                 </div>
               </div>
 
@@ -349,7 +367,7 @@
           <div class="col-md-6">
             <h5 class="text-black mb-3">Stay up to date on Paragraph Conference</h5>
             <div class="input-group">
-              <input type="email" class="form-control" placeholder="Enter your email">
+              <input type="email" class="form-control border-outline-dark">
               <button class="btn btn-outline-dark bg-secondary text-white" type="button">Sign Up</button>
             </div>
           </div>
