--- a/fullstackconf.html
+++ b/fullstackconf.html
@@ -200,7 +200,7 @@
                 </div>
                 <span class="badge bg-primary rounded-pill">11:00am</span>
               </div>
-              <div class="list-group-item d-flex justify-content-between align-items-center py-3">
+              <div class="list-group-item d-flex justify-content-between align-items-center py-3 bg-secondary-subtle">
                 <div>
                   <h5 class="mb-1">Lunch</h5>
                   <p class="mb-1 text-muted">Free Pizza</p>
